--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: Platane/snk@v2
+      - name: Generate snake animation
+        uses: Platane/snk/svg-only@v2  # Use svg-only version
         with:
-          github_user_name: Gdzelishviliv
-          outputs: dist/snake.svg
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+          github_user_name: Gdzelishviliv  # Replace with your GitHub username
+      - name: Upload snake.svg
+        uses: actions/upload-artifact@v2
         with:
-          target_branch: output
-          build_dir: dist
+          name: snake-animation
+          path: dist/snake.svg
